--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/auth": "^4.8.1",
+    "@nuxtjs/axios": "^5.5.4",
+    "@nuxtjs/dotenv": "^1.3.0",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
