--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@nuxtjs/auth": "^4.8.1",
     "@nuxtjs/axios": "^5.5.4",
-    "@nuxtjs/dotenv": "^1.3.0",
+    "dotenv": "^8.0.0",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
