--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@nuxtjs/auth": "^4.8.1",
     "@nuxtjs/axios": "^5.5.4",
     "dotenv": "^8.0.0",
-    "nuxt": "^2.0.0"
+    "govuk-frontend": "^3.0.0",
+    "node-sass": "^4.12.0",
+    "nuxt": "^2.0.0",
+    "sass-loader": "^7.1.0"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^1.0.1",
