--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@nuxtjs/auth": "^4.8.1",
     "@nuxtjs/axios": "^5.5.4",
+    "@nuxtjs/moment": "^1.2.0",
     "dotenv": "^8.0.0",
     "govuk-frontend": "^3.0.0",
     "node-sass": "^4.12.0",
