Using new Nuxt OAuth library

--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.20",
     "@fortawesome/free-solid-svg-icons": "^5.10.0",
     "@fortawesome/vue-fontawesome": "^0.1.6",
-    "@nuxtjs/auth": "^4.8.1",
     "@nuxtjs/axios": "^5.5.4",
     "@nuxtjs/moment": "^1.2.0",
     "dotenv": "^8.0.0",
     "govuk-frontend": "^3.0.0",
     "node-sass": "^4.12.0",
     "nuxt": "^2.0.0",
+    "nuxt-oauth": "^2.1.1",
     "sass-loader": "^7.1.0",
     "vue-api-query": "^1.5.1"
   },
