--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # API credentials.
-API_BASE_URL=
-API_OAUTH_URL=
+API_BASE_URL=http://localhost/v1
+API_OAUTH_URL=http://localhost/oauth
 API_OAUTH_CLIENT_ID=
 API_OAUTH_CLIENT_SECRET=
+API_OAUTH_SECRET_KEY=secret
