--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "lint:fix": "npm run lint -- --fix",
     "test": "jest",
     "dev": "nuxt",
     "build": "nuxt build",
