--- a/.travis.yml
+++ b/.travis.yml
@@ -1,29 +1,40 @@
+# Skip builds for new tags.
 if: tag IS blank
+
+# Only build on the following branches.
 branches:
   only:
     - master
     - develop
 
-language: node_js
-node_js:
-  - "10"
+# Use Python as the base image/language.
+language: python
+python:
+  - "2.7"
 
-cache:
-  directories:
-    - node_modules
+# Sudo and Docker both required for the build.
+sudo: required
+services:
+  - docker
 
-install:
-  - npm ci
+# Commands to run before the testing.
+before_script:
+  - docker-compose build
+  - docker-compose up -d
+  - docker-compose run --rm -T app npm ci
+  - docker-compose run --rm -T app mv .env.example .env
 
+# Commands to run for the tests.
 script:
-  - echo "No tests ran"
+  - docker-compose run --rm -T app npm run lint
 
+# Commands to run before deploying.
 before_deploy:
-  - curl "https://s3.amazonaws.com/aws-cli/awscli-bundle.zip" -o "/tmp/awscli-bundle.zip"
-  - unzip /tmp/awscli-bundle.zip -d /tmp
-  - /tmp/awscli-bundle/install -b $HOME/bin/aws
-  - export PATH=$PATH:$HOME/bin
+  - curl "https://s3.amazonaws.com/aws-cli/awscli-bundle.zip" -o "awscli-bundle.zip"
+  - unzip awscli-bundle.zip
+  - sudo ./awscli-bundle/install -i /usr/local/aws -b /usr/local/bin/aws
 
+# Commands to run for deploying.
 deploy:
   - provider: script
     script: ./.travis/deploy.sh
