--- a/aws/cloudformation.yml
+++ b/aws/cloudformation.yml
@@ -237,6 +237,7 @@ Resources:
             Ref: TargetGroup
       NetworkConfiguration:
         AwsvpcConfiguration:
+          AssignPublicIp: ENABLED
           SecurityGroups:
             - Fn::GetAtt:
                 - ECSServiceSecurityGroup
