--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,5 @@ services:
       - .:/var/www/html
     ports:
       - "${APP_PORT:-3000}:80"
-    command: pm2-dev start npm -- run dev
+    command: npm run dev
     restart: on-failure
