--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nuxt-oauth": "^2.1.1",
     "nuxt-start": "^2.11.0",
     "sass-loader": "^7.1.0",
+    "showdown": "^1.9.1",
     "vue-api-query": "^1.5.1"
   },
   "devDependencies": {
